Added DELETE functionality.  Stubbed in PUT.

--- a/Samples/Silverlight/QueryableSilverlight/MainPage.xaml
+++ b/Samples/Silverlight/QueryableSilverlight/MainPage.xaml
@@ -43,6 +43,7 @@
 				<RowDefinition Height="Auto" />
 				<RowDefinition Height="Auto" />
 				<RowDefinition Height="Auto" />
+				<RowDefinition Height="Auto" />
 			</Grid.RowDefinitions>
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="Auto" />
@@ -83,6 +84,11 @@
 				Margin="5"
 				Grid.Row="4"
 				Grid.Column="1"/>
+			<Button
+				Content="Delete Selected Person"
+				Style="{StaticResource Local_Button}"
+				Click="DeletePerson"
+				Grid.Row="5"/>
 		</Grid>
 		
 		<TextBox
