I added a GenericMediaTypeProcessor that allows the ViewEngineProcessor to work correctly. The problem this introduces is separate processors for distinct types. At this time, such a solution appears inevitable. Also, I've noticed that the view sometimes doesn't render on the first load. I'm not sure why, and this doesn't always happen.

--- a/Samples/ContactManager/Contact.haml
+++ b/Samples/ContactManager/Contact.haml
@@ -1,10 +1,19 @@
 ﻿!!!
 %html
+  %head
+    %title =Model.Name
   %body
-    %p Name: = ViewData.Name
-    %p Email: = ViewData.Email
-    %p Address: = ViewData.Address
-    %p City: = ViewData.City
-    %p State: = ViewData.State
-    %p Zip: = ViewData.Zip
-    %p Twitter: = ViewData.Twitter
+    %p Name:
+      =Model.Name
+    %p Email:
+      =Model.Email
+    %p Address:
+      =Model.Address
+    %p City:
+      =Model.City
+    %p State:
+      =Model.State
+    %p Zip:
+      =Model.Zip
+    %p Twitter:
+      =Model.Twitter
